--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-lib/
+dist/lib/CLDC11.jar
+lib/CodenameOne_SRC.zip
+lib/CodenameOne.jar
+lib/CLDC11.jar
+dist/lib/CodenameOne_SRC.zip
+dist/lib/CodenameOne.jar
